force-app/main/default/objects/FIX_SKU__c/FIX_SKU__c.object-meta.xml
<CustomObject>
    <label>FIX SKU</label>
    <nameField>
        <label>SKU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FIX SKUS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>