force-app/main/default/objects/FIX_SKU__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FIX SKUS</relationshipLabel>
    <relationshipName>FIX_SKUS</relationshipName>
    <type>Lookup</type>
</CustomField>