force-app/main/default/objects/FIX_SKU__c/fields/just_for_test__c.field-meta.xml
<CustomField>
    <fullName>just_for_test__c</fullName>
    <formula>if(DATEVALUE(CreatedDate ) &gt;= TODAY(),&apos;yes&apos;,&apos;No&apos; )</formula>
    <label>just for test</label>
    <type>Text</type>
</CustomField>