force-app/main/default/objects/FIX_SKU__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a1</fullName>
            </value>
            <value>
                <fullName>a2</fullName>
            </value>
            <value>
                <fullName>a3</fullName>
            </value>
            <value>
                <fullName>a4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>