force-app/main/default/objects/FIX_SKU__c/recordTypes/Dev_Team.recordType-meta.xml
<RecordType>
    <fullName>Dev_Team</fullName>
    <active>true</active>
    <label>Dev Team</label>
</RecordType>