force-app/main/default/objects/FIX_SKU__c/validationRules/testfronull.validationRule-meta.xml
<ValidationRule>
    <fullName>testfronull</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Account__c ),PRIORVALUE(Account__c) !=null)</errorConditionFormula>
    <errorMessage>yes this ids fire</errorMessage>
</ValidationRule>